objects/XAAffectedProduct__c.object
<CustomObject>
    <fields>
        <fullName>AffectedProduct__c</fullName>
        <label>Affected Product</label>
        <referenceTo>CommercialReference__c</referenceTo>
        <relationshipLabel>XA Affected Products</relationshipLabel>
        <relationshipName>XA_Affected_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <formula>AffectedProduct__r.Business__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommercialReference__c</fullName>
        <formula>AffectedProduct__r.CommercialReference__c</formula>
        <label>Commercial Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContainmentAction__c</fullName>
        <label>Containment Action</label>
        <referenceTo>ContainmentAction__c</referenceTo>
        <relationshipLabel>XA Affected Products</relationshipLabel>
        <relationshipName>XA_Affected_Products</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DateCodesSerialNumber__c</fullName>
        <formula>AffectedProduct__r.DateCodesSerialNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Codes / Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndBatchcode__c</fullName>
        <formula>AffectedProduct__r.EndBatchcode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Batch code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDatecode__c</fullName>
        <formula>AffectedProduct__r.EndDatecode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date code</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <formula>AffectedProduct__r.Family__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMRCode__c</fullName>
        <formula>AffectedProduct__r.GMRCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GMR Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InitialSerialN__c</fullName>
        <formula>AffectedProduct__r.InitialSerialN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Serial N°</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastSerialN__c</fullName>
        <formula>AffectedProduct__r.LastSerialN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Serial N°</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonStandardDatecode__c</fullName>
        <formula>AffectedProduct__r.NonStandardDatecode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Standard Date code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonStandardSerialN__c</fullName>
        <formula>AffectedProduct__r.NonStandardSerialN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Standard Serial N°</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plantcode__c</fullName>
        <formula>AffectedProduct__r.Plantcode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plant code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <formula>AffectedProduct__r.Problem__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Problem</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductDescription__c</fullName>
        <formula>AffectedProduct__r.ProductDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <formula>AffectedProduct__r.ProductFamily__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <formula>AffectedProduct__r.ProductGroup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLine__c</fullName>
        <formula>AffectedProduct__r.ProductLine__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductSuccession__c</fullName>
        <formula>AffectedProduct__r.ProductSuccession__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Succession</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartBatchcode__c</fullName>
        <formula>AffectedProduct__r.StartBatchcode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Batch code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDatecode__c</fullName>
        <formula>AffectedProduct__r.StartDatecode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date code</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SubFamily__c</fullName>
        <formula>AffectedProduct__r.SubFamily__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_Uniqueness__c</fullName>
        <label>TECH_Uniqueness</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>XA Affected Product</label>
    <nameField>
        <displayFormat>XAAP-{0000000000}</displayFormat>
        <label>XA Aff Prod Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>XA Affected Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>